Add notebook with data preprocessing. Add toxicity classifier and vectorizer models.

--- a/notebooks/1.0-initial-data-exploration.ipynb
+++ b/notebooks/1.0-initial-data-exploration.ipynb
@@ -44,12 +44,8 @@
    "execution_count": 1,
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import os\n",
-    "import sys\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ],
@@ -77,7 +73,7 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv('../data/raw/filtered.tsv', delimiter='\\t', quoting=3, index_col=0)"
+    "dataset = pd.read_csv('../data/raw/filtered_paramnt/filtered.tsv', delimiter='\\t', quoting=3, index_col=0)"
    ],
    "metadata": {
     "collapsed": false,
